# pi-docker

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  APPEND_SYSTEM.md  Dockerfile  PLAN_TODO.md  README.md  aicli.pl  aicli.sh  cocoindex.yml  codebase-index.json  config.json  docker-bake.hcl  mcp.json  opencode  opencode.json  opencode.pl  opencode.sh  pi  pi.dev.jsonc  pi.pl  pi.sh  pi_auth.json  pi_settings.json  settings.json  tui.json
cocoindex_plugins/: __init__.py  pyproject.toml  register_providers.py  sitecustomize.py
cocoindex_plugins/llamacpp_provider/: __init__.py
docs/: FLM_USAGE_STATS_FIX.md  LLAMA_SLOT_ID_FIX.md
mcp_servers/: ccc_granular.json
mcp_servers/ccc_granular/: server.py
plugins/opencode-slot-cache/: manifest.js  slot_cache.py  slot_cache_lib.py
skills/arduino-cli/: SKILL.md
skills/socat/: SKILL.md
