[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cocoindex-plugins"
version = "0.1.0"
description = "Custom providers for CocoIndex / LiteLLM integration"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["cocoindex_plugins*"]
